--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -54,3 +54,30 @@
   color: white;
   transition: all 0.2s;
 }
+
+.banner--loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 448px; /* Adjust this value based on your banner height */
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #ff6969;
+  border-radius: 50%;
+  animation: -webkit-spin 1s linear infinite;
+  animation: -moz-spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
