--- a/src/styles/SignUpPage.css
+++ b/src/styles/SignUpPage.css
@@ -1,6 +1,6 @@
 .signUpPage {
-  max-width: 300px;
-  padding: 70px;
+  max-width: 290px;
+  padding: 5vh;
   background-color: black;
   margin-left: auto;
   margin-right: auto;
@@ -44,4 +44,51 @@
 .signUpPage__link:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+/* Overlay styling */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; /* Make sure it’s on top */
+}
+
+/* Alert box styling */
+.overlay-alert {
+  background: black;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  width: 280px;
+  height: 150px;
+  box-shadow: 0px 0px 20px 2px rgb(255 255 255 / 20%);
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* OK button styling */
+.overlay-alert button {
+  margin-top: 15px;
+  padding: 10px 20px;
+  background-color: #e50914;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 1;
+  margin-top: 1.5rem;
+}
+
+.overlay-alert button:hover {
+  opacity: 0.8;
 }
