--- a/src/styles/SignUpPage.css
+++ b/src/styles/SignUpPage.css
@@ -1,4 +1,4 @@
-.signUpPage {
+.credentials {
   max-width: 290px;
   padding: 5vh;
   background-color: black;
@@ -7,16 +7,16 @@
   border-radius: 5px;
 }
 
-.signUpPage > form {
+.credentials > form {
   display: grid;
   flex-direction: column;
 }
 
-.signUpPage > form > h1 {
+.credentials > form > h1 {
   margin-bottom: 25px;
 }
 
-.signUpPage > form > input {
+.credentials > form > input {
   outline-width: 0;
   height: 40px;
   margin-bottom: 14px;
@@ -25,7 +25,7 @@
   padding: 5px 15px;
 }
 
-.signUpPage > form > button {
+.credentials > form > button {
   padding: 16px 20px;
   font-size: 1rem;
   color: #fff;
@@ -37,11 +37,15 @@
   margin-top: 15px;
 }
 
-.signUpPage__gray {
+.credentials h4 {
+  text-wrap-mode: nowrap;
+}
+
+.credentials__gray {
   color: gray;
 }
 
-.signUpPage__link:hover {
+.credentials__link:hover {
   cursor: pointer;
   text-decoration: underline;
 }
@@ -52,7 +56,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  background: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -67,18 +71,17 @@
   border-radius: 8px;
   text-align: center;
   width: 280px;
-  height: 150px;
-  box-shadow: 0px 0px 20px 2px rgb(255 255 255 / 20%);
+  height: 120px;
+  box-shadow: 0px 0px 100px 30px rgb(255 255 255 / 12%);
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 /* OK button styling */
 .overlay-alert button {
-  margin-top: 15px;
   padding: 10px 20px;
   background-color: #e50914;
   color: white;
@@ -86,7 +89,6 @@
   border-radius: 5px;
   cursor: pointer;
   opacity: 1;
-  margin-top: 1.5rem;
 }
 
 .overlay-alert button:hover {
