--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+button {
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity: 1;
+}
+
+button:active {
+  transform: translateY(1px);
+}
